refactor: change reservation dir to lessee
