# cmd/docs/v2/swagger.yaml
@@ -474,6 +474,151 @@ paths:
       summary: Verify provided OTP
       tags:
       - auth
+  /lessee/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Approves a lease reservation using the reservation ID provided
+        in the URL.
+      parameters:
+      - description: Reservation ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Reservation Status
+        in: body
+        name: reservation
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.ApproveReservation'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Reservation approved successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Invalid reservation ID
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Reservation not found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Approve a Lease Reservation
+      tags:
+      - Reservation
+  /lessee/create:
+    post:
+      consumes:
+      - application/json
+      description: Parses the reservation body and creates a new lease reservation
+        using the lessee ID from the JWT token.
+      parameters:
+      - description: Lease Reservation Data
+        in: body
+        name: reservation
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.CreateReservation'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Reservation created successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Failed to parse reservation body
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Create a New Lease Reservation
+      tags:
+      - Reservation
+  /lessee/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a lease reservation using the reservation ID provided in
+        the URL.
+      parameters:
+      - description: Reservation ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Reservation deleted successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Invalid reservation ID
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Reservation not found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Delete a Lease Reservation
+      tags:
+      - Reservation
+  /lessee/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Parses the reservation body and updates an existing lease reservation
+        identified by its ID.
+      parameters:
+      - description: Reservation ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Lease Reservation Update Data
+        in: body
+        name: reservation
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.UpdateReservation'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Reservation updated successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Failed to parse reservation body or invalid reservation ID
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Reservation not found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Update an Existing Lease Reservation
+      tags:
+      - Reservation
   /payments/process:
     post:
       consumes:
@@ -832,149 +977,4 @@ paths:
       summary: Update a property
       tags:
       - Property
-  /reservation/create:
-    post:
-      consumes:
-      - application/json
-      description: Parses the reservation body and creates a new lease reservation
-        using the lessee ID from the JWT token.
-      parameters:
-      - description: Lease Reservation Data
-        in: body
-        name: reservation
-        required: true
-        schema:
-          $ref: '#/definitions/dtos.CreateReservation'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Reservation created successfully
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "400":
-          description: Failed to parse reservation body
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/utils.Response'
-      summary: Create a New Lease Reservation
-      tags:
-      - Reservation
-  /reservations/{id}:
-    put:
-      consumes:
-      - application/json
-      description: Approves a lease reservation using the reservation ID provided
-        in the URL.
-      parameters:
-      - description: Reservation ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Reservation Status
-        in: body
-        name: reservation
-        required: true
-        schema:
-          $ref: '#/definitions/dtos.ApproveReservation'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Reservation approved successfully
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "400":
-          description: Invalid reservation ID
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "404":
-          description: Reservation not found
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/utils.Response'
-      summary: Approve a Lease Reservation
-      tags:
-      - Reservation
-  /reservations/delete/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes a lease reservation using the reservation ID provided in
-        the URL.
-      parameters:
-      - description: Reservation ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Reservation deleted successfully
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "400":
-          description: Invalid reservation ID
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "404":
-          description: Reservation not found
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/utils.Response'
-      summary: Delete a Lease Reservation
-      tags:
-      - Reservation
-  /reservations/update/{id}:
-    put:
-      consumes:
-      - application/json
-      description: Parses the reservation body and updates an existing lease reservation
-        identified by its ID.
-      parameters:
-      - description: Reservation ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Lease Reservation Update Data
-        in: body
-        name: reservation
-        required: true
-        schema:
-          $ref: '#/definitions/dtos.UpdateReservation'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Reservation updated successfully
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "400":
-          description: Failed to parse reservation body or invalid reservation ID
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "404":
-          description: Reservation not found
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/utils.Response'
-      summary: Update an Existing Lease Reservation
-      tags:
-      - Reservation
 swagger: "2.0"
